# Neural-Search-Engine

./: Neural_Search_Report.html  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: images_dataset.csv  processed_metadata.pkl
models/: kmeans.pkl  label_encoder.pkl  pca.pkl  svm.pkl
notebooks/: training_pipeline.ipynb
src/: download_images.py  feature_extractor.py  predictor.py  test_backend.py  train.py  utils.py
